Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2025/commands/713.77D.221801|fc=1.yaml
+++ b/tests/test_cases/2025/commands/713.77D.221801|fc=1.yaml
@@ -50,6 +50,13 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FR_VSS: 1067.4
+    VOLKSWAGEN_FR_VSS_V2: 1067.4
+  response: |-
+    77D101062180129B220
+    77D2100078005C90709
+    77D2206A001AAAAAAAA
+- expected_values:
     VOLKSWAGEN_FR_VSS: 1162.2
     VOLKSWAGEN_FR_VSS_V2: 1162.2
   response: |-
