--- a/tests/test_cases/2025/commands/710.77A.222AF7|fc=1.yaml
+++ b/tests/test_cases/2025/commands/710.77A.222AF7|fc=1.yaml
@@ -402,6 +402,38 @@ test_cases:
     77A2300248A4A5A4455
 - expected_values:
     VOLKSWAGEN_AUX_BAT_AGE_CAP: 72
+    VOLKSWAGEN_AUX_BAT_AGE_POW: 87
+    VOLKSWAGEN_AUX_BAT_C: 10.531
+    VOLKSWAGEN_AUX_BAT_CAP: 68
+    VOLKSWAGEN_AUX_BAT_CHRG_TOT: 1004.5
+    VOLKSWAGEN_AUX_BAT_DSCH_TOT: 978.5
+    VOLKSWAGEN_AUX_BAT_SOC: 67
+    VOLKSWAGEN_AUX_BAT_T: 12
+    VOLKSWAGEN_AUX_BAT_T_S: 12
+    VOLKSWAGEN_AUX_BAT_V: 14.804
+  response: |-
+    77A101A622AF72A3400
+    77A2100292320433434
+    77A2214130000273D00
+    77A2300263948574455
+- expected_values:
+    VOLKSWAGEN_AUX_BAT_AGE_CAP: 72
+    VOLKSWAGEN_AUX_BAT_AGE_POW: 87
+    VOLKSWAGEN_AUX_BAT_C: 12.247
+    VOLKSWAGEN_AUX_BAT_CAP: 68
+    VOLKSWAGEN_AUX_BAT_CHRG_TOT: 1004.8
+    VOLKSWAGEN_AUX_BAT_DSCH_TOT: 978.5
+    VOLKSWAGEN_AUX_BAT_SOC: 68
+    VOLKSWAGEN_AUX_BAT_T: 12
+    VOLKSWAGEN_AUX_BAT_T_S: 12
+    VOLKSWAGEN_AUX_BAT_V: 14.948
+  response: |-
+    77A101A622AF72AC400
+    77A21002FD721443434
+    77A2215130000274000
+    77A2300263948574455
+- expected_values:
+    VOLKSWAGEN_AUX_BAT_AGE_CAP: 72
     VOLKSWAGEN_AUX_BAT_AGE_POW: 88
     VOLKSWAGEN_AUX_BAT_C: 41.12
     VOLKSWAGEN_AUX_BAT_CAP: 68
