--- a/tests/test_cases/2025/commands/7E1.7E9.222104.yaml
+++ b/tests/test_cases/2025/commands/7E1.7E9.222104.yaml
@@ -1,8 +1,8 @@
 command_id: 7E1.7E9.222104
 test_cases:
 - expected_values:
-    VOLKSWAGEN_ATF_T: 18
-  response: 7E9046221043A
+    VOLKSWAGEN_ATF_T: 13
+  response: '7E90462210435'
 - expected_values:
     VOLKSWAGEN_ATF_T: 98
   response: 7E9046221048A
