Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/713.77D.221802|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221802|fc=1.yaml
@@ -36,6 +36,20 @@ test_cases:
     77D21000780102223B4
     77D2212E201AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RL_VSS: 46
+    VOLKSWAGEN_RL_VSS_V2: 46
+  response: |-
+    77D101062180201CC20
+    77D21000780085C0952
+    77D22089301AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_RL_VSS: 334.9
+    VOLKSWAGEN_RL_VSS_V2: 334.9
+  response: |-
+    77D10106218020D1520
+    77D210007800442045A
+    77D22045001AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RL_VSS: 562.9
     VOLKSWAGEN_RL_VSS_V2: 562.9
   response: |-
