--- a/tests/test_cases/2024/commands/713.77D.221803|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221803|fc=1.yaml
@@ -29,6 +29,13 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RR_VSS: 94.7
+    VOLKSWAGEN_RR_VSS_V2: 94.7
+  response: |-
+    77D101062180303B320
+    77D21000780085A0A53
+    77D22094701AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RR_VSS: 104.7
     VOLKSWAGEN_RR_VSS_V2: 104.7
   response: |-
@@ -49,6 +56,13 @@ test_cases:
     77D10106218030BFF20
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_RR_VSS: 394
+    VOLKSWAGEN_RR_VSS_V2: 394
+  response: |-
+    77D10106218030F6420
+    77D21000780056305F2
+    77D22058D01AAAAAAAA
 - expected_values:
     VOLKSWAGEN_RR_VSS: 1165
     VOLKSWAGEN_RR_VSS_V2: 1165
