--- a/tests/test_cases/2024/commands/7E0.0105.yaml
+++ b/tests/test_cases/2024/commands/7E0.0105.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0105
 test_cases:
 - expected_values:
-    ECT: 23
-  response: 7E80341053F
+    ECT: 10
+  response: '7E803410532'
 - expected_values:
     ECT: 109
   response: '7E803410595'
