--- a/tests/test_cases/2024/commands/767.7D1.220838|fc=1.yaml
+++ b/tests/test_cases/2024/commands/767.7D1.220838|fc=1.yaml
@@ -1,6 +1,10 @@
 command_id: 767.7D1.220838|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_ECALL_SOC: 88
+    VOLKSWAGEN_ECALL_STATUS: NORMAL
+  response: 7D1056208380258
+- expected_values:
     VOLKSWAGEN_ECALL_SOC: 89
     VOLKSWAGEN_ECALL_STATUS: NORMAL
   response: 7D1056208380259
