--- a/tests/test_cases/2024/command_support.yaml
+++ b/tests/test_cases/2024/command_support.yaml
@@ -151,6 +151,12 @@ supported_commands_by_ecu:
   - 7E0.019D:FUEL_RATE_ALT,VFUEL_RATE
   - 7E0.019E:EXH_RATE
   - 7E0.01A6:ODO
+  - 7E0.7E8.22F40D:VOLKSWAGEN_VSS_V2
+  - 7E0.7E8.22F41F:VOLKSWAGEN_RUNTM
+  - 7E0.7E8.22F421:VOLKSWAGEN_MIL_DIST
+  - 7E0.7E8.22F430:VOLKSWAGEN_WARM_UPS
+  - 7E0.7E8.22F431:VOLKSWAGEN_CLR_DIST
+  - 7E0.7E8.22F442:VOLKSWAGEN_VPWR
   "7E1":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0104:LOAD_PCT
@@ -176,6 +182,13 @@ supported_commands_by_ecu:
   - 7E4.7EC.010D
   - 7E4.7EC.0142
   - 7E4.7EC.220102
+  "7E6":
+  - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
+  - 010C:RPM
+  - 0130:WARM_UPS
+  - 0131:CLR_DIST
+  - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
+  - 7E6.7EE.0131
   "FC00":
   - FC00.FE0076.222005|ta=76,c=17:VOLKSWAGEN_BRAKE_BOOSTER_P
   - FC00.FE0076.222055|ta=76,c=17:VOLKSWAGEN_RADIATOR_FAN_DUTY
@@ -476,12 +489,6 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.22395E:VOLKSWAGEN_ENG_BRAKE_PUMP
   - 7E0.7E8.223DF8:VOLKSWAGEN_ENG_MOTOR_RPM
   - 7E0.7E8.224380:VOLKSWAGEN_ENG_TRQ_REQ_2
-  - 7E0.7E8.22F40D:VOLKSWAGEN_VSS_V2
-  - 7E0.7E8.22F41F:VOLKSWAGEN_RUNTM
-  - 7E0.7E8.22F421:VOLKSWAGEN_MIL_DIST
-  - 7E0.7E8.22F430:VOLKSWAGEN_WARM_UPS
-  - 7E0.7E8.22F431:VOLKSWAGEN_CLR_DIST
-  - 7E0.7E8.22F442:VOLKSWAGEN_VPWR
   "7E1":
   - 7E1.220302:VOLKSWAGEN_DRIVE_TIME
   - 7E1.220303:VOLKSWAGEN_DRIVE_TIME_ECO
