Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2025/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/714.77E.22224B|fc=1.yaml
@@ -21,3 +21,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 122
   response: 77E0562224B007A
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 123
+  response: 77E0562224B007B
