--- a/tests/test_cases/2025/commands/7E1.223841.yaml
+++ b/tests/test_cases/2025/commands/7E1.223841.yaml
@@ -10,5 +10,5 @@ test_cases:
     VOLKSWAGEN_ODO_TCM_1: 1114112
   response: '7E90762384100001100'
 - expected_values:
-    VOLKSWAGEN_ODO_TCM_1: 168951808
-  response: 7E9076238410000120A
+    VOLKSWAGEN_ODO_TCM_1: 85131264
+  response: '7E90762384100001305'
