--- a/tests/test_cases/2025/commands/7E1.223887.yaml
+++ b/tests/test_cases/2025/commands/7E1.223887.yaml
@@ -10,5 +10,5 @@ test_cases:
     VOLKSWAGEN_ODO_TCM_2_HD: 111411.2
   response: '7E90762388700001100'
 - expected_values:
-    VOLKSWAGEN_ODO_TCM_2_HD: 16895180.8
-  response: 7E9076238870000120A
+    VOLKSWAGEN_ODO_TCM_2_HD: 8513126.4
+  response: '7E90762388700001305'
