Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2025/commands/713.77D.221802|fc=1.yaml
+++ b/tests/test_cases/2025/commands/713.77D.221802|fc=1.yaml
@@ -29,6 +29,13 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RL_VSS: 397.2
+    VOLKSWAGEN_RL_VSS_V2: 397.2
+  response: |-
+    77D10106218020F8420
+    77D2100078004A404D9
+    77D2204C301AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RL_VSS: 511.2
     VOLKSWAGEN_RL_VSS_V2: 511.2
   response: |-
