--- a/tests/test_cases/2025/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/714.77E.22224B|fc=1.yaml
@@ -24,3 +24,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 123
   response: 77E0562224B007B
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 124
+  response: 77E0562224B007C
