Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2025/commands/710.77A.222AF7|fc=1.yaml
+++ b/tests/test_cases/2025/commands/710.77A.222AF7|fc=1.yaml
@@ -371,6 +371,22 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_AUX_BAT_AGE_CAP: 67
     VOLKSWAGEN_AUX_BAT_AGE_POW: 84
+    VOLKSWAGEN_AUX_BAT_C: 18.865
+    VOLKSWAGEN_AUX_BAT_CAP: 68
+    VOLKSWAGEN_AUX_BAT_CHRG_TOT: 1018.2
+    VOLKSWAGEN_AUX_BAT_DSCH_TOT: 990.2
+    VOLKSWAGEN_AUX_BAT_SOC: 65
+    VOLKSWAGEN_AUX_BAT_T: 14
+    VOLKSWAGEN_AUX_BAT_T_S: 12
+    VOLKSWAGEN_AUX_BAT_V: 14.733
+  response: |-
+    77A101A622AF729ED00
+    77A210049B11C413634
+    77A221314000027C600
+    77A230026AE43544455
+- expected_values:
+    VOLKSWAGEN_AUX_BAT_AGE_CAP: 67
+    VOLKSWAGEN_AUX_BAT_AGE_POW: 84
     VOLKSWAGEN_AUX_BAT_C: 9.206
     VOLKSWAGEN_AUX_BAT_CAP: 68
     VOLKSWAGEN_AUX_BAT_CHRG_TOT: 1017.3
