--- a/tests/test_cases/2025/commands/713.77D.221801|fc=1.yaml
+++ b/tests/test_cases/2025/commands/713.77D.221801|fc=1.yaml
@@ -22,10 +22,10 @@ test_cases:
     77D21FFFF00FFFEFFFE
     77D22FFFE01AAAAAAAA
 - expected_values:
-    VOLKSWAGEN_FR_VSS: 32
-    VOLKSWAGEN_FR_VSS_V2: 32
+    VOLKSWAGEN_FR_VSS: 30.8
+    VOLKSWAGEN_FR_VSS_V2: 30.8
   response: |-
-    77D1010621801014060
+    77D1010621801013460
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
@@ -42,6 +42,13 @@ test_cases:
     77D101062180113FF20
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_FR_VSS: 646.6
+    VOLKSWAGEN_FR_VSS_V2: 646.6
+  response: |-
+    77D1010621801194220
+    77D2100078008EB0AA5
+    77D22099201AAAAAAAA
 - expected_values:
     VOLKSWAGEN_FR_VSS: 733.3
     VOLKSWAGEN_FR_VSS_V2: 733.3
