--- a/tests/test_cases/2025/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2025/commands/714.77E.22224B|fc=1.yaml
@@ -27,3 +27,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 124
   response: 77E0562224B007C
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 125
+  response: 77E0562224B007D
