Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/710.77A.222AB5|fc=1.yaml
+++ b/tests/test_cases/2024/commands/710.77A.222AB5|fc=1.yaml
@@ -3,18 +3,23 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_RANGE_EST_CAN: 0
   response: |-
-    77A100D622AB5007B00
-    77A217B000000000000
+    77A100D622AB5004200
+    77A2142000000000000
 - expected_values:
     VOLKSWAGEN_RANGE_EST_CAN: 0
   response: |-
-    77A100D622AB5008F00
-    77A218F000000000000
+    77A100D622AB5004D00
+    77A214D000007FF0000
 - expected_values:
     VOLKSWAGEN_RANGE_EST_CAN: 0
   response: |-
-    77A100D622AB5009000
-    77A2190000000000000
+    77A100D622AB5004F00
+    77A214F000007FF0000
+- expected_values:
+    VOLKSWAGEN_RANGE_EST_CAN: 0
+  response: |-
+    77A100D622AB5005000
+    77A2150000007FF0000
 - expected_values:
     VOLKSWAGEN_RANGE_EST_CAN: 0
   response: |-
