--- a/tests/test_cases/2024/commands/713.77D.221802|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221802|fc=1.yaml
@@ -57,6 +57,13 @@ test_cases:
     77D210007800442045A
     77D22045001AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RL_VSS: 407.7
+    VOLKSWAGEN_RL_VSS_V2: 407.7
+  response: |-
+    77D10106218020FED20
+    77D210007800430048E
+    77D22045C01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RL_VSS: 615.7
     VOLKSWAGEN_RL_VSS_V2: 615.7
   response: |-
