--- a/tests/test_cases/2024/commands/713.77D.221803|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221803|fc=1.yaml
@@ -50,6 +50,13 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RR_VSS: 535.2
+    VOLKSWAGEN_RR_VSS_V2: 535.2
+  response: |-
+    77D101062180314E820
+    77D21000780050B0581
+    77D22054F01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RR_VSS: 1165
     VOLKSWAGEN_RR_VSS_V2: 1165
   response: |-
