--- a/tests/test_cases/2024/commands/713.77D.221801|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221801|fc=1.yaml
@@ -36,6 +36,13 @@ test_cases:
     77D210007800441046B
     77D22045301AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FR_VSS: 72.9
+    VOLKSWAGEN_FR_VSS_V2: 72.9
+  response: |-
+    77D101062180102D920
+    77D2100078007E509AE
+    77D22092201AAAAAAAA
+- expected_values:
     VOLKSWAGEN_FR_VSS: 76.7
     VOLKSWAGEN_FR_VSS_V2: 76.7
   response: |-
