--- a/tests/test_cases/2024/commands/714.77E.221014|fc=1.yaml
+++ b/tests/test_cases/2024/commands/714.77E.221014|fc=1.yaml
@@ -1,9 +1,9 @@
 command_id: 714.77E.221014|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_AAT: 40
-    VOLKSWAGEN_DASH_AMBIENT_AIR_T: -5
-  response: 77E046210145A
+    VOLKSWAGEN_AAT: 38
+    VOLKSWAGEN_DASH_AMBIENT_AIR_T: -6
+  response: '77E0462101458'
 - expected_values:
     VOLKSWAGEN_AAT: 123
     VOLKSWAGEN_DASH_AMBIENT_AIR_T: 36.5
