Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/710.77A.222AF7|fc=1.yaml
+++ b/tests/test_cases/2024/commands/710.77A.222AF7|fc=1.yaml
@@ -513,6 +513,22 @@ test_cases:
     77A221011000047B400
     77A230046A85A604455
 - expected_values:
+    VOLKSWAGEN_AUX_BAT_AGE_CAP: 60
+    VOLKSWAGEN_AUX_BAT_AGE_POW: 66
+    VOLKSWAGEN_AUX_BAT_C: -9.836
+    VOLKSWAGEN_AUX_BAT_CAP: 68
+    VOLKSWAGEN_AUX_BAT_CHRG_TOT: 11956.9
+    VOLKSWAGEN_AUX_BAT_DSCH_TOT: 11883.1
+    VOLKSWAGEN_AUX_BAT_SOC: 79
+    VOLKSWAGEN_AUX_BAT_T: 7
+    VOLKSWAGEN_AUX_BAT_T_S: 8
+    VOLKSWAGEN_AUX_BAT_V: 12.604
+  response: |-
+    77A101A622AF7219CFF
+    77A21FFD994214F2F30
+    77A2217180001D31100
+    77A2301D02F3C424455
+- expected_values:
     VOLKSWAGEN_AUX_BAT_AGE_CAP: 64
     VOLKSWAGEN_AUX_BAT_AGE_POW: 77
     VOLKSWAGEN_AUX_BAT_C: 0.184
