--- a/tests/test_cases/2024/commands/714.77E.221014|fc=1.yaml
+++ b/tests/test_cases/2024/commands/714.77E.221014|fc=1.yaml
@@ -1,9 +1,9 @@
 command_id: 714.77E.221014|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_AAT: 33
-    VOLKSWAGEN_DASH_AMBIENT_AIR_T: -8.5
-  response: '77E0462101453'
+    VOLKSWAGEN_AAT: 28
+    VOLKSWAGEN_DASH_AMBIENT_AIR_T: -11
+  response: 77E046210144E
 - expected_values:
     VOLKSWAGEN_AAT: 123
     VOLKSWAGEN_DASH_AMBIENT_AIR_T: 36.5
