Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/713.77D.221802|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221802|fc=1.yaml
@@ -36,6 +36,13 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RL_VSS: 32
+    VOLKSWAGEN_RL_VSS_V2: 32
+  response: |-
+    77D1010621802014020
+    77D2100078008970B2B
+    77D22096701AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RL_VSS: 40.2
     VOLKSWAGEN_RL_VSS_V2: 40.2
   response: |-
@@ -43,12 +50,19 @@ test_cases:
     77D21000780102223B4
     77D2212E201AAAAAAAA
 - expected_values:
-    VOLKSWAGEN_RL_VSS: 46
-    VOLKSWAGEN_RL_VSS_V2: 46
+    VOLKSWAGEN_RL_VSS: 166.6
+    VOLKSWAGEN_RL_VSS_V2: 166.6
   response: |-
-    77D101062180201CC20
-    77D21000780085C0952
-    77D22089301AAAAAAAA
+    77D1010621802068220
+    77D2100078005190560
+    77D22053801AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_RL_VSS: 235.4
+    VOLKSWAGEN_RL_VSS_V2: 235.4
+  response: |-
+    77D1010621802093220
+    77D2100078004EB052E
+    77D22050801AAAAAAAA
 - expected_values:
     VOLKSWAGEN_RL_VSS: 334.9
     VOLKSWAGEN_RL_VSS_V2: 334.9
@@ -64,12 +78,12 @@ test_cases:
     77D210007800430048E
     77D22045C01AAAAAAAA
 - expected_values:
-    VOLKSWAGEN_RL_VSS: 615.7
-    VOLKSWAGEN_RL_VSS_V2: 615.7
+    VOLKSWAGEN_RL_VSS: 463
+    VOLKSWAGEN_RL_VSS_V2: 463
   response: |-
-    77D1010621802180D20
-    77D21000780054E06A6
-    77D22060A01AAAAAAAA
+    77D1010621802121620
+    77D210007800D9B1226
+    77D220E5401AAAAAAAA
 - expected_values:
     VOLKSWAGEN_RL_VSS: 1164
     VOLKSWAGEN_RL_VSS_V2: 1164
