--- a/tests/test_cases/2024/commands/714.77E.221014|fc=1.yaml
+++ b/tests/test_cases/2024/commands/714.77E.221014|fc=1.yaml
@@ -1,9 +1,9 @@
 command_id: 714.77E.221014|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_AAT: 26
-    VOLKSWAGEN_DASH_AMBIENT_AIR_T: -12
-  response: 77E046210144C
+    VOLKSWAGEN_AAT: 22
+    VOLKSWAGEN_DASH_AMBIENT_AIR_T: -14
+  response: '77E0462101448'
 - expected_values:
     VOLKSWAGEN_AAT: 123
     VOLKSWAGEN_DASH_AMBIENT_AIR_T: 36.5
