--- a/tests/test_cases/2024/commands/7E0.0144.yaml
+++ b/tests/test_cases/2024/commands/7E0.0144.yaml
@@ -4,11 +4,11 @@ test_cases:
     EQ_RAT: 0.82905
   response: 7E80441446A1E
 - expected_values:
+    EQ_RAT: 0.88283
+  response: '7E80441447100'
+- expected_values:
     EQ_RAT: 0.98433
   response: 7E80441447DFE
-- expected_values:
-    EQ_RAT: 0.9922
-  response: 7E80441447F00
 - expected_values:
     EQ_RAT: 1.07887
   response: 7E80441448A18
