--- a/tests/test_cases/2024/commands/746.7B0.222626|fc=1.yaml
+++ b/tests/test_cases/2024/commands/746.7B0.222626|fc=1.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE: 100
   response: 7B00662262600E2C8
+- expected_values:
+    VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE: 100
+  response: 7B00662262600E3C8
