--- a/tests/test_cases/2024/commands/7E0.0134.yaml
+++ b/tests/test_cases/2024/commands/7E0.0134.yaml
@@ -1,21 +1,13 @@
 command_id: 7E0.0134
 test_cases:
 - expected_values:
-    LAMBDA11_CURRENT: 0.74805
-    O2S11_CURRENT: -0.85547
-  response: 7E80641345FC07F25
-- expected_values:
-    LAMBDA11_CURRENT: 0.8125
-    O2S11_CURRENT: -0.5625
-  response: 7E806413468007F70
+    LAMBDA11_CURRENT: 0
+    O2S11_CURRENT: -128
+  response: '7E806413400000000'
 - expected_values:
     LAMBDA11_CURRENT: 0.99707
     O2S11_CURRENT: -0.00391
   response: 7E80641347FA07FFF
-- expected_values:
-    LAMBDA11_CURRENT: 0.99902
-    O2S11_CURRENT: 0
-  response: 7E80641347FE08000
 - expected_values:
     LAMBDA11_CURRENT: 1.99
     O2S11_CURRENT: 0.87891
