Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/713.77D.221803|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221803|fc=1.yaml
@@ -57,6 +57,20 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RR_VSS: 402.3
+    VOLKSWAGEN_RR_VSS_V2: 402.3
+  response: |-
+    77D10106218030FB720
+    77D21000780106B14AE
+    77D22123601AAAAAAAA
+- expected_values:
+    VOLKSWAGEN_RR_VSS: 438.9
+    VOLKSWAGEN_RR_VSS_V2: 438.9
+  response: |-
+    77D1010621803112520
+    77D21000780043D0458
+    77D22044901AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RR_VSS: 1165
     VOLKSWAGEN_RR_VSS_V2: 1165
   response: |-
