Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/713.77D.221802|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221802|fc=1.yaml
@@ -22,6 +22,13 @@ test_cases:
     77D21000780FFFEFFFE
     77D22FFFE01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_RL_VSS: 1.8
+    VOLKSWAGEN_RL_VSS_V2: 1.8
+  response: |-
+    77D1010621802001200
+    77D21000280FFFEFFFE
+    77D22FFFE01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_RL_VSS: 25.5
     VOLKSWAGEN_RL_VSS_V2: 25.5
   response: |-
@@ -85,9 +92,9 @@ test_cases:
     77D210007800D9B1226
     77D220E5401AAAAAAAA
 - expected_values:
-    VOLKSWAGEN_RL_VSS: 1164
-    VOLKSWAGEN_RL_VSS_V2: 1164
+    VOLKSWAGEN_RL_VSS: 1203.4
+    VOLKSWAGEN_RL_VSS_V2: 1203.4
   response: |-
-    77D10106218022D7820
+    77D10106218022F0220
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
