--- a/tests/test_cases/2024/commands/710.77A.222AF7|fc=1.yaml
+++ b/tests/test_cases/2024/commands/710.77A.222AF7|fc=1.yaml
@@ -129,6 +129,22 @@ test_cases:
     77A2218180001CE7C00
     77A2301CB9640464455
 - expected_values:
+    VOLKSWAGEN_AUX_BAT_AGE_CAP: 100
+    VOLKSWAGEN_AUX_BAT_AGE_POW: 98
+    VOLKSWAGEN_AUX_BAT_C: -260.86
+    VOLKSWAGEN_AUX_BAT_CAP: 68
+    VOLKSWAGEN_AUX_BAT_CHRG_TOT: 228.2
+    VOLKSWAGEN_AUX_BAT_DSCH_TOT: 249.1
+    VOLKSWAGEN_AUX_BAT_SOC: 80
+    VOLKSWAGEN_AUX_BAT_T: 26
+    VOLKSWAGEN_AUX_BAT_T_S: 31
+    VOLKSWAGEN_AUX_BAT_V: 11.414
+  response: |-
+    77A101A622AF71CF6FF
+    77A21FC050433504247
+    77A221212000008EA00
+    77A230009BB64624455
+- expected_values:
     VOLKSWAGEN_AUX_BAT_AGE_CAP: 64
     VOLKSWAGEN_AUX_BAT_AGE_POW: 78
     VOLKSWAGEN_AUX_BAT_C: -224.37
