--- a/tests/test_cases/2024/commands/710.77A.222AB5|fc=1.yaml
+++ b/tests/test_cases/2024/commands/710.77A.222AB5|fc=1.yaml
@@ -3,18 +3,23 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_RANGE_EST_CAN: 0
   response: |-
-    77A100D622AB5004000
-    77A2140000000000000
+    77A100D622AB5002D00
+    77A212D000000000000
 - expected_values:
     VOLKSWAGEN_RANGE_EST_CAN: 0
   response: |-
-    77A100D622AB5004D00
-    77A214D000007FF0000
+    77A100D622AB5002D00
+    77A212D000007FF0000
 - expected_values:
     VOLKSWAGEN_RANGE_EST_CAN: 0
   response: |-
-    77A100D622AB5004F00
-    77A214F000000000000
+    77A100D622AB5002F00
+    77A212F000007FF0000
+- expected_values:
+    VOLKSWAGEN_RANGE_EST_CAN: 0
+  response: |-
+    77A100D622AB5003000
+    77A2130000007FF0000
 - expected_values:
     VOLKSWAGEN_RANGE_EST_CAN: 0
   response: |-
