--- a/tests/test_cases/2024/commands/FC00.FE0076.222055|ta=76,c=17.yaml
+++ b/tests/test_cases/2024/commands/FC00.FE0076.222055|ta=76,c=17.yaml
@@ -7,5 +7,8 @@ test_cases:
     VOLKSWAGEN_RADIATOR_FAN_DUTY: 23.05
   response: 17FE0076056220550901
 - expected_values:
+    VOLKSWAGEN_RADIATOR_FAN_DUTY: 28.13
+  response: 17FE0076056220550AFD
+- expected_values:
     VOLKSWAGEN_RADIATOR_FAN_DUTY: 46.09
   response: 17FE0076056220551201
