Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/713.77D.221800|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.221800|fc=1.yaml
@@ -29,6 +29,13 @@ test_cases:
     77D21000780FFFFFFFF
     77D22FFFF01AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_FL_VSS: 39.5
+    VOLKSWAGEN_FL_VSS_V2: 39.5
+  response: |-
+    77D1010621800018B20
+    77D2100078005B20605
+    77D2205DC01AAAAAAAA
+- expected_values:
     VOLKSWAGEN_FL_VSS: 66.3
     VOLKSWAGEN_FL_VSS_V2: 66.3
   response: |-
