--- a/tests/test_cases/2024/commands/710.77A.222AB4|fc=1.yaml
+++ b/tests/test_cases/2024/commands/710.77A.222AB4|fc=1.yaml
@@ -16,5 +16,11 @@ test_cases:
     VOLKSWAGEN_HVBAT_CSMP_AVG_INT: 13
     VOLKSWAGEN_RANGE_RESERVE_EST: 0
   response: |-
+    77A100D622AB4010000
+    77A210000000000000D
+- expected_values:
+    VOLKSWAGEN_HVBAT_CSMP_AVG_INT: 13
+    VOLKSWAGEN_RANGE_RESERVE_EST: 0
+  response: |-
     77A100D622AB4020000
     77A210000000000000D
