Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2018/commands/710.77A.222A61|fc=1.yaml
+++ b/tests/test_cases/2018/commands/710.77A.222A61|fc=1.yaml
@@ -1,54 +1,72 @@
 command_id: 710.77A.222A61|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 8798.5
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 8256.1
     VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
     77A100B622A61000157
     77A21B100014281AAAA
 - expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 8799.9
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 8256.1
     VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
     77A100B622A61000157
     77A21BF00014281AAAA
 - expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 8801.6
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 8256.7
     VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
     77A100B622A61000157
     77A21D000014287AAAA
 - expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 8804.8
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 8258
     VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
     77A100B622A61000157
     77A21F000014294AAAA
 - expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 8806.4
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 8258.6
     VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
     77A100B622A61000158
     77A21000001429AAAAA
 - expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 8807.3
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 8259.2
     VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
     77A100B622A61000158
     77A2109000142A0AAAA
 - expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 8808.9
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 8260.7
     VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
     77A100B622A61000158
     77A2119000142AFAAAA
 - expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 8832
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 8280.5
     VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
     77A100B622A61000159
     77A210000014375AAAA
 - expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 8833.6
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 8283.3
     VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
