--- a/tests/test_cases/2018/commands/713.77D.22180C|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.22180C|fc=1.yaml
@@ -1,6 +1,10 @@
 command_id: 713.77D.22180C|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_EDIFF_LOCK_FL_BRAKE_T: 0
+    VOLKSWAGEN_EDIFF_LOCK_FR_BRAKE_T: 0
+    VOLKSWAGEN_EDIFF_LOCK_RL_BRAKE_T: 0
+    VOLKSWAGEN_EDIFF_LOCK_RR_BRAKE_T: 0
     VOLKSWAGEN_EDL_ACTIVE: 0
     VOLKSWAGEN_EDL_FR_L_BRAKE_T: 0
     VOLKSWAGEN_EDL_FR_R_BRAKE_T: 0
@@ -10,6 +14,10 @@ test_cases:
     77D100C62180CBC0000
     77D21000000000000AA
 - expected_values:
+    VOLKSWAGEN_EDIFF_LOCK_FL_BRAKE_T: 22
+    VOLKSWAGEN_EDIFF_LOCK_FR_BRAKE_T: 21.5
+    VOLKSWAGEN_EDIFF_LOCK_RL_BRAKE_T: 15.5
+    VOLKSWAGEN_EDIFF_LOCK_RR_BRAKE_T: 15.5
     VOLKSWAGEN_EDL_ACTIVE: 0
     VOLKSWAGEN_EDL_FR_L_BRAKE_T: 22
     VOLKSWAGEN_EDL_FR_R_BRAKE_T: 21.5
@@ -19,6 +27,10 @@ test_cases:
     77D100C62180CBC002C
     77D21002B001F001FAA
 - expected_values:
+    VOLKSWAGEN_EDIFF_LOCK_FL_BRAKE_T: 23
+    VOLKSWAGEN_EDIFF_LOCK_FR_BRAKE_T: 23.5
+    VOLKSWAGEN_EDIFF_LOCK_RL_BRAKE_T: 22.5
+    VOLKSWAGEN_EDIFF_LOCK_RR_BRAKE_T: 23.5
     VOLKSWAGEN_EDL_ACTIVE: 0
     VOLKSWAGEN_EDL_FR_L_BRAKE_T: 23
     VOLKSWAGEN_EDL_FR_R_BRAKE_T: 23.5
@@ -28,6 +40,10 @@ test_cases:
     77D100C62180CBC002E
     77D21002F002D002FAA
 - expected_values:
+    VOLKSWAGEN_EDIFF_LOCK_FL_BRAKE_T: 126
+    VOLKSWAGEN_EDIFF_LOCK_FR_BRAKE_T: 126
+    VOLKSWAGEN_EDIFF_LOCK_RL_BRAKE_T: 108.5
+    VOLKSWAGEN_EDIFF_LOCK_RR_BRAKE_T: 108.5
     VOLKSWAGEN_EDL_ACTIVE: 0
     VOLKSWAGEN_EDL_FR_L_BRAKE_T: 126
     VOLKSWAGEN_EDL_FR_R_BRAKE_T: 126
@@ -37,6 +53,10 @@ test_cases:
     77D100C62180CBC00FC
     77D2100FC00D900D9AA
 - expected_values:
+    VOLKSWAGEN_EDIFF_LOCK_FL_BRAKE_T: 128
+    VOLKSWAGEN_EDIFF_LOCK_FR_BRAKE_T: 127.5
+    VOLKSWAGEN_EDIFF_LOCK_RL_BRAKE_T: 113
+    VOLKSWAGEN_EDIFF_LOCK_RR_BRAKE_T: 113
     VOLKSWAGEN_EDL_ACTIVE: 0
     VOLKSWAGEN_EDL_FR_L_BRAKE_T: 128
     VOLKSWAGEN_EDL_FR_R_BRAKE_T: 127.5
@@ -46,6 +66,10 @@ test_cases:
     77D100C62180CBC0100
     77D2100FF00E200E2AA
 - expected_values:
+    VOLKSWAGEN_EDIFF_LOCK_FL_BRAKE_T: 136
+    VOLKSWAGEN_EDIFF_LOCK_FR_BRAKE_T: 136
+    VOLKSWAGEN_EDIFF_LOCK_RL_BRAKE_T: 121
+    VOLKSWAGEN_EDIFF_LOCK_RR_BRAKE_T: 121.5
     VOLKSWAGEN_EDL_ACTIVE: 0
     VOLKSWAGEN_EDL_FR_L_BRAKE_T: 136
     VOLKSWAGEN_EDL_FR_R_BRAKE_T: 136
@@ -55,6 +79,10 @@ test_cases:
     77D100C62180CBC0110
     77D21011000F200F3AA
 - expected_values:
+    VOLKSWAGEN_EDIFF_LOCK_FL_BRAKE_T: 0
+    VOLKSWAGEN_EDIFF_LOCK_FR_BRAKE_T: 0
+    VOLKSWAGEN_EDIFF_LOCK_RL_BRAKE_T: 0
+    VOLKSWAGEN_EDIFF_LOCK_RR_BRAKE_T: 0
     VOLKSWAGEN_EDL_ACTIVE: 0
     VOLKSWAGEN_EDL_FR_L_BRAKE_T: 0
     VOLKSWAGEN_EDL_FR_R_BRAKE_T: 0
