--- a/tests/test_cases/2018/commands/7E0.7E8.221139.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.221139.yaml
@@ -2,13 +2,17 @@ command_id: 7E0.7E8.221139
 test_cases:
 - expected_values:
     VOLKSWAGEN_MEAN_INJ_QUANTITY: 152.95
+    VOLKSWAGEN_PQ35_AVG_CYCLE_CON: 152.95
   response: 7E8056211393BBF
 - expected_values:
     VOLKSWAGEN_MEAN_INJ_QUANTITY: 163.83
+    VOLKSWAGEN_PQ35_AVG_CYCLE_CON: 163.83
   response: 7E8056211393FFF
 - expected_values:
     VOLKSWAGEN_MEAN_INJ_QUANTITY: 163.84
+    VOLKSWAGEN_PQ35_AVG_CYCLE_CON: 163.84
   response: '7E8056211394000'
 - expected_values:
     VOLKSWAGEN_MEAN_INJ_QUANTITY: 174.39
+    VOLKSWAGEN_PQ35_AVG_CYCLE_CON: 174.39
   response: 7E805621139441F
