--- a/tests/test_cases/2025/commands/746.7B0.22260C|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.22260C|fc=1.yaml
@@ -2,7 +2,9 @@ command_id: 746.7B0.22260C|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 32.634
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 32.66667
   response: 7B00462260C62
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 58.608
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 58.66667
   response: 7B00462260CB0
