--- a/tests/test_cases/2025/commands/746.7B0.22260D|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.22260D|fc=1.yaml
@@ -2,7 +2,9 @@ command_id: 746.7B0.22260D|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 32.634
+    VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 32.66667
   response: 7B00462260D62
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_R_DEFL_T: 56.61
+    VOLKSWAGEN_FRONT_RIGHT_DEFLECTOR_T: 56.66667
   response: 7B00462260DAA
