--- a/tests/test_cases/2018/commands/713.77D.221821|fc=1.yaml
+++ b/tests/test_cases/2018/commands/713.77D.221821|fc=1.yaml
@@ -1,6 +1,7 @@
 command_id: 713.77D.221821|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 237
     VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 245
@@ -27,6 +28,7 @@ test_cases:
     77D253876F5F5F5F5ED
     77D26EDEDEDAAAAAAAA
 - expected_values:
+    VOLKSWAGEN_MQB_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 239
     VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 245
@@ -53,6 +55,7 @@ test_cases:
     77D253876F5F5F5F5EF
     77D26EFEFEFAAAAAAAA
 - expected_values:
+    VOLKSWAGEN_MQB_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 240
     VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 245
@@ -79,6 +82,7 @@ test_cases:
     77D253876F5F5F5F5F0
     77D26F0F0F0AAAAAAAA
 - expected_values:
+    VOLKSWAGEN_MQB_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 255
     VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 245
@@ -105,6 +109,7 @@ test_cases:
     77D253876F5F5F5F5FF
     77D26FFFEFEAAAAAAAA
 - expected_values:
+    VOLKSWAGEN_MQB_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 254
     VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 246
@@ -131,6 +136,7 @@ test_cases:
     77D253876F6F6F6F6FE
     77D26FFFEFFAAAAAAAA
 - expected_values:
+    VOLKSWAGEN_MQB_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 255
     VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 246
@@ -157,6 +163,7 @@ test_cases:
     77D253876F6F6F6F6FF
     77D26FFFFFEAAAAAAAA
 - expected_values:
+    VOLKSWAGEN_MQB_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 255
     VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 254
@@ -183,6 +190,7 @@ test_cases:
     77D253876FEFFFFFFFF
     77D26FFFFFFAAAAAAAA
 - expected_values:
+    VOLKSWAGEN_MQB_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 255
     VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 255
@@ -209,6 +217,7 @@ test_cases:
     77D253876FFFEFEFDFF
     77D26FFFEFDAAAAAAAA
 - expected_values:
+    VOLKSWAGEN_MQB_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_AVAIL: 1
     VOLKSWAGEN_TPMS_FR_L_FLAT_TIRE_IND: 64
     VOLKSWAGEN_TPMS_FR_L_TIRE_P_DIFF_IND: 64
