--- a/tests/test_cases/2018/commands/746.7B0.222609|fc=1.yaml
+++ b/tests/test_cases/2018/commands/746.7B0.222609|fc=1.yaml
@@ -1,8 +1,10 @@
 command_id: 746.7B0.222609|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_AAT_FROMCABIN: 12
     VOLKSWAGEN_AAT_V2: 12
   response: 7B00462260918
 - expected_values:
+    VOLKSWAGEN_AAT_FROMCABIN: 34
     VOLKSWAGEN_AAT_V2: 34
   response: 7B00462260944
