--- a/tests/test_cases/2018/commands/746.7B0.22260C|fc=1.yaml
+++ b/tests/test_cases/2018/commands/746.7B0.22260C|fc=1.yaml
@@ -2,7 +2,9 @@ command_id: 746.7B0.22260C|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 8.325
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 8.33333
   response: 7B00462260C19
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_DEFL_T: 24.309
+    VOLKSWAGEN_FRONT_LEFT_DEFLECTOR_T: 24.33333
   response: 7B00462260C49
