--- a/tests/test_cases/2018/commands/746.7B0.222622|fc=1.yaml
+++ b/tests/test_cases/2018/commands/746.7B0.222622|fc=1.yaml
@@ -2,7 +2,9 @@ command_id: 746.7B0.222622|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 0
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 0
   response: 7B006622622001100
 - expected_values:
     VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE: 35
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACTUAL_VALUE: 35
   response: 7B006622622005F46
