--- a/tests/test_cases/2018/commands/7E0.221152.yaml
+++ b/tests/test_cases/2018/commands/7E0.221152.yaml
@@ -1,14 +1,18 @@
-command_id: 7E0.7E8.221152
+command_id: 7E0.221152
 test_cases:
 - expected_values:
     VOLKSWAGEN_EM_RPM_2: 2811.5
+    VOLKSWAGEN_MISFIRES__CYL__2: 5623
   response: 7E80562115215F7
 - expected_values:
     VOLKSWAGEN_EM_RPM_2: 2814
+    VOLKSWAGEN_MISFIRES__CYL__2: 5628
   response: 7E80562115215FC
 - expected_values:
     VOLKSWAGEN_EM_RPM_2: 3006.5
+    VOLKSWAGEN_MISFIRES__CYL__2: 6013
   response: 7E805621152177D
 - expected_values:
     VOLKSWAGEN_EM_RPM_2: 7543.5
+    VOLKSWAGEN_MISFIRES__CYL__2: 15087
   response: 7E8056211523AEF
