--- a/tests/test_cases/2018/commands/7E0.7E8.221153.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.221153.yaml
@@ -2,10 +2,13 @@ command_id: 7E0.7E8.221153
 test_cases:
 - expected_values:
     VOLKSWAGEN_EM_TORQ_1: 373.46875
+    VOLKSWAGEN_PQ35_DPF_OIL_ASH_VOL: 119.51
   response: 7E8056211532EAF
 - expected_values:
     VOLKSWAGEN_EM_TORQ_1: 373.84375
+    VOLKSWAGEN_PQ35_DPF_OIL_ASH_VOL: 119.63
   response: 7E8056211532EBB
 - expected_values:
     VOLKSWAGEN_EM_TORQ_1: 488.15625
+    VOLKSWAGEN_PQ35_DPF_OIL_ASH_VOL: 156.21
   response: 7E8056211533D05
