--- a/tests/test_cases/2018/commands/7E0.7E8.2211BD.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2211BD.yaml
@@ -2,16 +2,21 @@ command_id: 7E0.7E8.2211BD
 test_cases:
 - expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.2156
+    VOLKSWAGEN_PQ35_OIL_LVL_CRIT: 12.156
   response: 7E8056211BD0BDF
 - expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.2616
+    VOLKSWAGEN_PQ35_OIL_LVL_CRIT: 12.616
   response: 7E8056211BD0C52
 - expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.4332
+    VOLKSWAGEN_PQ35_OIL_LVL_CRIT: 14.332
   response: 7E8056211BD0DFF
 - expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.4344
+    VOLKSWAGEN_PQ35_OIL_LVL_CRIT: 14.344
   response: 7E8056211BD0E02
 - expected_values:
     VOLKSWAGEN_OIL_LEVEL_WARN: 1.4492
+    VOLKSWAGEN_PQ35_OIL_LVL_CRIT: 14.492
   response: 7E8056211BD0E27
