--- a/tests/test_cases/2018/commands/7E0.7E8.2211BE.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.2211BE.yaml
@@ -2,10 +2,13 @@ command_id: 7E0.7E8.2211BE
 test_cases:
 - expected_values:
     VOLKSWAGEN_EOT_V2: 1
+    VOLKSWAGEN_PQ35_OIL_T_2: -273
   response: 7E8056211BE0001
 - expected_values:
     VOLKSWAGEN_EOT_V2: 65530
+    VOLKSWAGEN_PQ35_OIL_T_2: 6279.9
   response: 7E8056211BEFFFA
 - expected_values:
     VOLKSWAGEN_EOT_V2: 65535
+    VOLKSWAGEN_PQ35_OIL_T_2: 6280.4
   response: 7E8056211BEFFFF
