--- a/tests/test_cases/2024/commands/746.7B0.222605|fc=1.yaml
+++ b/tests/test_cases/2024/commands/746.7B0.222605|fc=1.yaml
@@ -2,7 +2,9 @@ command_id: 746.7B0.222605|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_REFRIG_P: 2.2
+    VOLKSWAGEN_REFRIGERANT_PRESSURE: 2.2
   response: 7B0046226050B
 - expected_values:
     VOLKSWAGEN_CLIMATE_REFRIG_P: 15.4
+    VOLKSWAGEN_REFRIGERANT_PRESSURE: 15.4
   response: 7B0046226054D
