--- a/tests/test_cases/2024/commands/746.7B0.222612|fc=1.yaml
+++ b/tests/test_cases/2024/commands/746.7B0.222612|fc=1.yaml
@@ -3,12 +3,15 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0.333
     VOLKSWAGEN_HVAC_EVAP_T: 30
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 0.33333
   response: 7B005622612012C
 - expected_values:
     VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0.333
     VOLKSWAGEN_HVAC_EVAP_T: 51
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 0.33333
   response: 7B00562261201FE
 - expected_values:
     VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0.666
     VOLKSWAGEN_HVAC_EVAP_T: 52
+    VOLKSWAGEN_T_AFTER_EVAPORATOR: 0.66667
   response: 7B0056226120208
