--- a/tests/test_cases/2024/commands/746.7B0.22263D|fc=1.yaml
+++ b/tests/test_cases/2024/commands/746.7B0.22263D|fc=1.yaml
@@ -2,7 +2,9 @@ command_id: 746.7B0.22263D|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_RR_DEFL_T: 26.64
+    VOLKSWAGEN_REAR_DEFLECTOR_T: 26.66667
   response: 7B00462263D50
 - expected_values:
     VOLKSWAGEN_CLIMATE_RR_DEFL_T: 73.26
+    VOLKSWAGEN_REAR_DEFLECTOR_T: 73.33333
   response: 7B00462263DDC
