--- a/tests/test_cases/2024/commands/767.7D1.220838|fc=1.yaml
+++ b/tests/test_cases/2024/commands/767.7D1.220838|fc=1.yaml
@@ -1,14 +1,20 @@
 command_id: 767.7D1.220838|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_ECALL_BATTERY_CHARGE_STATUS: 2
     VOLKSWAGEN_ECALL_SOC: 81
     VOLKSWAGEN_ECALL_STATUS: NORMAL
+    VOLKSWAGEN_MQB_ECALL_BAT_CRIT: 2
   response: 7D1056208380251
 - expected_values:
+    VOLKSWAGEN_ECALL_BATTERY_CHARGE_STATUS: 2
     VOLKSWAGEN_ECALL_SOC: 83
     VOLKSWAGEN_ECALL_STATUS: NORMAL
+    VOLKSWAGEN_MQB_ECALL_BAT_CRIT: 2
   response: 7D1056208380253
 - expected_values:
+    VOLKSWAGEN_ECALL_BATTERY_CHARGE_STATUS: 2
     VOLKSWAGEN_ECALL_SOC: 98
     VOLKSWAGEN_ECALL_STATUS: NORMAL
+    VOLKSWAGEN_MQB_ECALL_BAT_CRIT: 2
   response: 7D1056208380262
