--- a/tests/test_cases/2025/commands/746.7B0.222611|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.222611|fc=1.yaml
@@ -2,7 +2,9 @@ command_id: 746.7B0.222611|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_LEG_DEFL_T: 34.632
+    VOLKSWAGEN_LEG_DEFLECTOR_T: 34.66667
   response: 7B00462261168
 - expected_values:
     VOLKSWAGEN_CLIMATE_LEG_DEFL_T: 65.268
+    VOLKSWAGEN_LEG_DEFLECTOR_T: 65.33333
   response: 7B004622611C4
