--- a/tests/test_cases/2025/commands/746.7B0.22263D|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.22263D|fc=1.yaml
@@ -2,7 +2,9 @@ command_id: 746.7B0.22263D|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_CLIMATE_RR_DEFL_T: 32.634
+    VOLKSWAGEN_REAR_DEFLECTOR_T: 32.66667
   response: 7B00462263D62
 - expected_values:
     VOLKSWAGEN_CLIMATE_RR_DEFL_T: 61.938
+    VOLKSWAGEN_REAR_DEFLECTOR_T: 62
   response: 7B00462263DBA
