--- a/tests/test_cases/2025/commands/767.7D1.220838|fc=1.yaml
+++ b/tests/test_cases/2025/commands/767.7D1.220838|fc=1.yaml
@@ -1,14 +1,20 @@
 command_id: 767.7D1.220838|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_ECALL_BATTERY_CHARGE_STATUS: 2
     VOLKSWAGEN_ECALL_SOC: 82
     VOLKSWAGEN_ECALL_STATUS: NORMAL
+    VOLKSWAGEN_MQB_ECALL_BAT_CRIT: 2
   response: 7D1056208380252
 - expected_values:
+    VOLKSWAGEN_ECALL_BATTERY_CHARGE_STATUS: 2
     VOLKSWAGEN_ECALL_SOC: 85
     VOLKSWAGEN_ECALL_STATUS: NORMAL
+    VOLKSWAGEN_MQB_ECALL_BAT_CRIT: 2
   response: 7D1056208380255
 - expected_values:
+    VOLKSWAGEN_ECALL_BATTERY_CHARGE_STATUS: 2
     VOLKSWAGEN_ECALL_SOC: 95
     VOLKSWAGEN_ECALL_STATUS: NORMAL
+    VOLKSWAGEN_MQB_ECALL_BAT_CRIT: 2
   response: 7D105620838025F
