--- a/tests/test_cases/2025/commands/7E1.223887.yaml
+++ b/tests/test_cases/2025/commands/7E1.223887.yaml
@@ -1,14 +1,14 @@
 command_id: 7E1.223887
 test_cases:
 - expected_values:
-    VOLKSWAGEN_ODO_TCM_2_HD: 426246144
+    VOLKSWAGEN_MQB_TCM_ODO_2: 426246144
   response: 7E907623887000010FE
 - expected_values:
-    VOLKSWAGEN_ODO_TCM_2_HD: 427923865.6
+    VOLKSWAGEN_MQB_TCM_ODO_2: 427923865.6
   response: 7E907623887000010FF
 - expected_values:
-    VOLKSWAGEN_ODO_TCM_2_HD: 111411.2
+    VOLKSWAGEN_MQB_TCM_ODO_2: 111411.2
   response: '7E90762388700001100'
 - expected_values:
-    VOLKSWAGEN_ODO_TCM_2_HD: 8513126.4
+    VOLKSWAGEN_MQB_TCM_ODO_2: 8513126.4
   response: '7E90762388700001305'
