--- a/tests/test_cases/2025/commands/7E1.7E9.223841.yaml
+++ b/tests/test_cases/2025/commands/7E1.7E9.223841.yaml
@@ -1,14 +1,18 @@
-command_id: 7E1.223841
+command_id: 7E1.7E9.223841
 test_cases:
 - expected_values:
     VOLKSWAGEN_ODO_TCM_1: 4262461440
+    VOLKSWAGEN_ODO_V1: 435
   response: 7E907623841000010FE
 - expected_values:
     VOLKSWAGEN_ODO_TCM_1: 4279238656
+    VOLKSWAGEN_ODO_V1: 435.1
   response: 7E907623841000010FF
 - expected_values:
     VOLKSWAGEN_ODO_TCM_1: 1114112
+    VOLKSWAGEN_ODO_V1: 435.2
   response: '7E90762384100001100'
 - expected_values:
     VOLKSWAGEN_ODO_TCM_1: 85131264
+    VOLKSWAGEN_ODO_V1: 486.9
   response: '7E90762384100001305'
