--- a/tests/test_cases/2024/commands/70F.779.222BE9|fc=1.yaml
+++ b/tests/test_cases/2024/commands/70F.779.222BE9|fc=1.yaml
@@ -25,5 +25,8 @@ test_cases:
     VOLKSWAGEN_PQ35_HAL_V: 2.3
   response: 77904622BE917
 - expected_values:
+    VOLKSWAGEN_PQ35_HAL_V: 3.3
+  response: 77904622BE921
+- expected_values:
     VOLKSWAGEN_PQ35_HAL_V: 4.3
   response: 77904622BE92B
