--- a/tests/test_cases/2024/commands/713.77D.22180A|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.22180A|fc=1.yaml
@@ -17,6 +17,10 @@ test_cases:
     VOLKSWAGEN_MQB_HAL_CLUTCH_OPEN: 0
   response: 77D0662180A800960
 - expected_values:
+    VOLKSWAGEN_MQB_HAL_CLUTCH_BLOCK: 0
+    VOLKSWAGEN_MQB_HAL_CLUTCH_OPEN: 0
+  response: 77D0662180A800A6A
+- expected_values:
     VOLKSWAGEN_MQB_HAL_CLUTCH_BLOCK: 1
     VOLKSWAGEN_MQB_HAL_CLUTCH_OPEN: 0
   response: 77D0662180A800D8A
@@ -28,6 +32,10 @@ test_cases:
     VOLKSWAGEN_MQB_HAL_CLUTCH_BLOCK: 0
     VOLKSWAGEN_MQB_HAL_CLUTCH_OPEN: 0
   response: 77D0662180A802EE0
+- expected_values:
+    VOLKSWAGEN_MQB_HAL_CLUTCH_BLOCK: 0
+    VOLKSWAGEN_MQB_HAL_CLUTCH_OPEN: 0
+  response: 77D0662180A804095
 - expected_values:
     VOLKSWAGEN_MQB_HAL_CLUTCH_BLOCK: 0
     VOLKSWAGEN_MQB_HAL_CLUTCH_OPEN: 0
