--- a/tests/test_cases/2024/commands/70F.779.222BF3|fc=1.yaml
+++ b/tests/test_cases/2024/commands/70F.779.222BF3|fc=1.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_PQ35_HAL_DUTY: 8.26741
   response: 77904622BF315
 - expected_values:
+    VOLKSWAGEN_PQ35_HAL_DUTY: 12.20427
+  response: 77904622BF31F
+- expected_values:
     VOLKSWAGEN_PQ35_HAL_DUTY: 14.96008
   response: 77904622BF326
 - expected_values:
@@ -18,3 +21,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_PQ35_HAL_DUTY: 30.31384
   response: 77904622BF34D
+- expected_values:
+    VOLKSWAGEN_PQ35_HAL_DUTY: 40.54969
+  response: 77904622BF367
