--- a/tests/test_cases/2024/commands/712.77C.221812|fc=1.yaml
+++ b/tests/test_cases/2024/commands/712.77C.221812|fc=1.yaml
@@ -12,3 +12,7 @@ test_cases:
     VOLKSWAGEN_MQB_SWA: 768.935
     VOLKSWAGEN_STEER_WHEEL_ANGLE: 768.875
   response: 77C056218121807
+- expected_values:
+    VOLKSWAGEN_MQB_SWA: 835.935
+    VOLKSWAGEN_STEER_WHEEL_ANGLE: 835.875
+  response: 77C056218121A1F
