--- a/tests/test_cases/2024/commands/714.77E.222211|fc=1.yaml
+++ b/tests/test_cases/2024/commands/714.77E.222211|fc=1.yaml
@@ -4,5 +4,8 @@ test_cases:
     VOLKSWAGEN_PQ35_CHG_AIR_P: 0
   response: '77E0462221100'
 - expected_values:
+    VOLKSWAGEN_PQ35_CHG_AIR_P: 1.56863
+  response: '77E0462221104'
+- expected_values:
     VOLKSWAGEN_PQ35_CHG_AIR_P: 17.64706
   response: 77E046222112D
