--- a/tests/test_cases/2024/commands/70F.779.222BF0|fc=1.yaml
+++ b/tests/test_cases/2024/commands/70F.779.222BF0|fc=1.yaml
@@ -10,5 +10,8 @@ test_cases:
     VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 0.2
   response: 77905622BF00002
 - expected_values:
+    VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 0.3
+  response: 77905622BF00003
+- expected_values:
     VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 1.6
   response: 77905622BF00010
