--- a/tests/test_cases/2024/commands/712.77C.221812|fc=1.yaml
+++ b/tests/test_cases/2024/commands/712.77C.221812|fc=1.yaml
@@ -9,6 +9,10 @@ test_cases:
     VOLKSWAGEN_STEER_WHEEL_ANGLE: 768.875
   response: 77C056218121807
 - expected_values:
+    VOLKSWAGEN_MQB_SWA: 799.935
+    VOLKSWAGEN_STEER_WHEEL_ANGLE: 799.875
+  response: 77C0562181218FF
+- expected_values:
     VOLKSWAGEN_MQB_SWA: 991.185
     VOLKSWAGEN_STEER_WHEEL_ANGLE: 991.125
   response: 77C056218121EF9
