--- a/tests/test_cases/2024/commands/7E0.0147.yaml
+++ b/tests/test_cases/2024/commands/7E0.0147.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.0147
 test_cases:
 - expected_values:
+    TP_B: 12.54902
+  response: '7E803414720'
+- expected_values:
     TP_B: 12.94118
   response: '7E803414721'
 - expected_values:
