Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/714.77E.222211|fc=1.yaml
+++ b/tests/test_cases/2024/commands/714.77E.222211|fc=1.yaml
@@ -13,6 +13,9 @@ test_cases:
     VOLKSWAGEN_PQ35_CHG_AIR_P: 17.64706
   response: 77E046222112D
 - expected_values:
+    VOLKSWAGEN_PQ35_CHG_AIR_P: 19.21569
+  response: '77E0462221131'
+- expected_values:
     VOLKSWAGEN_PQ35_CHG_AIR_P: 29.01961
   response: 77E046222114A
 - expected_values:
