--- a/tests/test_cases/2024/commands/70F.779.222BF0|fc=1.yaml
+++ b/tests/test_cases/2024/commands/70F.779.222BF0|fc=1.yaml
@@ -16,5 +16,8 @@ test_cases:
     VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 0.5
   response: 77905622BF00005
 - expected_values:
+    VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 1.1
+  response: 77905622BF0000B
+- expected_values:
     VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 1.6
   response: 77905622BF00010
