--- a/tests/test_cases/2024/commands/70F.779.222BF0|fc=1.yaml
+++ b/tests/test_cases/2024/commands/70F.779.222BF0|fc=1.yaml
@@ -19,5 +19,8 @@ test_cases:
     VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 1.1
   response: 77905622BF0000B
 - expected_values:
+    VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 1.3
+  response: 77905622BF0000D
+- expected_values:
     VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 1.6
   response: 77905622BF00010
