--- a/tests/test_cases/2024/commands/70F.779.222BF0|fc=1.yaml
+++ b/tests/test_cases/2024/commands/70F.779.222BF0|fc=1.yaml
@@ -13,6 +13,9 @@ test_cases:
     VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 0.3
   response: 77905622BF00003
 - expected_values:
+    VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 0.4
+  response: 77905622BF00004
+- expected_values:
     VOLKSWAGEN_PQ35_HAL_F_R_VSS_DIFF: 0.5
   response: 77905622BF00005
 - expected_values:
