--- a/tests/test_cases/2024/commands/713.77D.22180A|fc=1.yaml
+++ b/tests/test_cases/2024/commands/713.77D.22180A|fc=1.yaml
@@ -11,6 +11,10 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_MQB_HAL_CLUTCH_BLOCK: 0
     VOLKSWAGEN_MQB_HAL_CLUTCH_OPEN: 0
+  response: 77D0662180A803200
+- expected_values:
+    VOLKSWAGEN_MQB_HAL_CLUTCH_BLOCK: 0
+    VOLKSWAGEN_MQB_HAL_CLUTCH_OPEN: 0
   response: 77D0662180A808235
 - expected_values:
     VOLKSWAGEN_MQB_HAL_CLUTCH_BLOCK: 0
