--- a/tests/test_cases/2024/commands/712.77C.221812|fc=1.yaml
+++ b/tests/test_cases/2024/commands/712.77C.221812|fc=1.yaml
@@ -1,6 +1,10 @@
 command_id: 712.77C.221812|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_SWA: 88.685
+    VOLKSWAGEN_STEER_WHEEL_ANGLE: 88.625
+  response: 77C0562181202C5
+- expected_values:
     VOLKSWAGEN_MQB_SWA: 224.435
     VOLKSWAGEN_STEER_WHEEL_ANGLE: 224.375
   response: 77C056218120703
