--- a/tests/test_cases/2023/command_support.yaml
+++ b/tests/test_cases/2023/command_support.yaml
@@ -66,3 +66,4 @@ unsupported_commands_by_ecu:
   "70B":
   - 70B.2218A0|fc=1:VOLKSWAGEN_TID_1,VOLKSWAGEN_TPOS_1,VOLKSWAGEN_TPS_1,VOLKSWAGEN_TPW_1,VOLKSWAGEN_TP_1,VOLKSWAGEN_TP_FR,VOLKSWAGEN_TT_1
   - 70B.2218A2|fc=1:VOLKSWAGEN_TID_3,VOLKSWAGEN_TPOS_3,VOLKSWAGEN_TPS_3,VOLKSWAGEN_TPW_3,VOLKSWAGEN_TP_3,VOLKSWAGEN_TP_RL,VOLKSWAGEN_TT_3
+  - 70B.2218A3|fc=1:VOLKSWAGEN_TID_4,VOLKSWAGEN_TPOS_4,VOLKSWAGEN_TPS_4,VOLKSWAGEN_TPW_4,VOLKSWAGEN_TP_4,VOLKSWAGEN_TP_RR,VOLKSWAGEN_TT_4
