Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2023/commands/710.77A.222A07|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A07|fc=1.yaml
@@ -1,6 +1,10 @@
 command_id: 710.77A.222A07|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_BAT_V_2A07: 12.575
+    VOLKSWAGEN_SSB_V: 69.54
+  response: 77A05622A07217F
+- expected_values:
     VOLKSWAGEN_BAT_V_2A07: 13.538
     VOLKSWAGEN_SSB_V: 69.54
   response: 77A05622A072542
