--- a/tests/test_cases/2023/commands/710.77A.222A61|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A61|fc=1.yaml
@@ -16,3 +16,11 @@ test_cases:
   response: |-
     77A100B622A61000117
     77A21C900011074AAAA
+- expected_values:
+    VOLKSWAGEN_MQB_BAT_TOT_CHG: 7172.3
+    VOLKSWAGEN_MQB_BAT_TOT_DIS: 6976.2
+    VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
+    VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
+  response: |-
+    77A100B622A61000118
+    77A212B00011082AAAA
