--- a/tests/test_cases/2023/commands/713.77D.221810|fc=1.yaml
+++ b/tests/test_cases/2023/commands/713.77D.221810|fc=1.yaml
@@ -3,6 +3,11 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
   response: |-
+    77D100C621810010014
+    77D21FCFD000003CCAA
+- expected_values:
+    VOLKSWAGEN_HYD_BRAKE_BOOST_ACTIVE: 0
+  response: |-
     77D100C621810010398
     77D21FC7D000003CCAA
 - expected_values:
