--- a/tests/test_cases/2023/commands/70F.779.222BE6|fc=1.yaml
+++ b/tests/test_cases/2023/commands/70F.779.222BE6|fc=1.yaml
@@ -1,6 +1,9 @@
 command_id: 70F.779.222BE6|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_PQ35_HAL_I: 0
+  response: 77905622BE60000
+- expected_values:
     VOLKSWAGEN_PQ35_HAL_I: 0.707
   response: 77905622BE602C3
 - expected_values:
