--- a/tests/test_cases/2023/commands/710.77A.222A00|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A00|fc=1.yaml
@@ -1,6 +1,10 @@
 command_id: 710.77A.222A00|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_MQB_GEN_TRG_V: 10.6
+    VOLKSWAGEN_SSB_VT: 10.6
+  response: 77A04622A0000
+- expected_values:
     VOLKSWAGEN_MQB_GEN_TRG_V: 13.9
     VOLKSWAGEN_SSB_VT: 13.9
   response: 77A04622A0021
