--- a/tests/test_cases/2023/commands/710.77A.222A09|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A09|fc=1.yaml
@@ -10,3 +10,8 @@ test_cases:
     VOLKSWAGEN_MQB_BAT_I: 30.78
     VOLKSWAGEN_SSB_C: 30.78
   response: 77A07622A090000783C
+- expected_values:
+    VOLKSWAGEN_BAT_I: 13777.158
+    VOLKSWAGEN_MQB_BAT_I: -14.598
+    VOLKSWAGEN_SSB_C: 0
+  response: 77A07622A09FFFFC6FA
