--- a/tests/test_cases/2023/commands/710.77A.222A0C|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A0C|fc=1.yaml
@@ -12,3 +12,7 @@ test_cases:
     VOLKSWAGEN_BAT_SOC: 65
     VOLKSWAGEN_SSB_SOC: 65
   response: 77A04622A0C41
+- expected_values:
+    VOLKSWAGEN_BAT_SOC: 74
+    VOLKSWAGEN_SSB_SOC: 74
+  response: 77A04622A0C4A
