--- a/tests/test_cases/2023/commands/710.77A.222A0F|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A0F|fc=1.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_USE_BAT_CHG: 40
   response: 77A04622A0F28
+- expected_values:
+    VOLKSWAGEN_USE_BAT_CHG: 48
+  response: 77A04622A0F30
