--- a/tests/test_cases/2023/commands/712.77C.221812|fc=1.yaml
+++ b/tests/test_cases/2023/commands/712.77C.221812|fc=1.yaml
@@ -12,3 +12,7 @@ test_cases:
     VOLKSWAGEN_MQB_SWA: -2.69
     VOLKSWAGEN_STEER_WHEEL_ANGLE: -2.75
   response: 77C06621812FFEA01
+- expected_values:
+    VOLKSWAGEN_MQB_SWA: -1.815
+    VOLKSWAGEN_STEER_WHEEL_ANGLE: -1.875
+  response: 77C06621812FFF101
